feat: handle longer times and make site responsive

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-size: 80%;
+  }
+
+  @media (min-width: 640px) {
+    html {
+      font-size: 100%;
+    }
+  }
+}
